--- a/components.json
+++ b/components.json
@@ -13,9 +13,9 @@
   "iconLibrary": "lucide",
   "aliases": {
     "components": "@/app/_components",
-    "utils": "@/app/_lib/utils",
-    "ui": "@/app/_components/ui",
+    "ui": "@/app/_components",
     "lib": "@/app/_lib",
+    "utils": "@/app/_lib/utils",
     "hooks": "@/app/_hooks"
   },
   "registries": {}
