--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint . --ext js,jsx,ts,tsx",
     "lint:fix": "eslint . --ext js,jsx,ts,tsx --fix",
     "prettier:format": "prettier . --write",
-    "prettier:format:check": "prettier . --check",
+    "prettier:check": "prettier . --check",
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-slot": "^1.2.4",
+    "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
@@ -40,9 +43,18 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "prettier": "^3.7.3",
     "prettier-plugin-tailwindcss": "^0.7.1",
-    "prisma": "^7.0.1",
+    "prisma": "^5.19.1",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@prisma/client",
+      "@prisma/engines",
+      "esbuild",
+      "prisma"
+    ]
   }
 }
